...
        android:text="Setup Your Profile"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Full Name"
        android:inputType="textPersonName"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Phone Number"
        android:inputType="phone"
        android:layout_marginBottom="32dp"/>

...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Entrant"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radio_organizer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Organizer"/>

        <RadioButton
            android:id="@+id/radio_admin"
...
            android:text="Admin"/>

    </RadioGroup>


    <Button
        android:id="@+id/btn_save_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save Profile"/>

</LinearLayout>
