...
                            android:src="@drawable/ic_event_available_24dp_000000_fill0_wght400_grad0_opsz24"
                            app:tint="@color/blue_deep" />
                    </LinearLayout>


                    <TextView
                        android:id="@+id/tv_total_events"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="24"
                        android:textColor="#000000"
                        android:textSize="28sp"
                        android:textStyle="bold" />
...
                            android:src="@drawable/ic_group_24dp_000000_fill0_wght400_grad0_opsz24"
                            app:tint="@color/green_deep" />
                    </LinearLayout>


                    <TextView
                        android:id="@+id/tv_total_entrants"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="24"
                        android:textColor="#000000"
                        android:textSize="28sp"
                        android:textStyle="bold" />
...
                            android:src="@drawable/ic_query_stats_24dp_000000_fill0_wght400_grad0_opsz24"
                            app:tint="@color/orange_deep" />
                    </LinearLayout>


                    <TextView
                        android:id="@+id/tv_full_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="24"
                        android:textColor="#000000"
                        android:textSize="28sp"
                        android:textStyle="bold" />
...
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>

            <ListView
                android:id="@+id/lv_organzier_event_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
