...
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="30dp" />

<!--    entrant button-->
    <LinearLayout
        android:id="@+id/btn_entrant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:padding="20dp"
        android:background="@drawable/border_radius"
        android:backgroundTint="@color/gray_light">
...
            android:textStyle="bold" />

    </LinearLayout>

<!--    admin button-->
    <LinearLayout
        android:id="@+id/btn_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:padding="20dp"
        android:background="@drawable/border_radius"
        android:backgroundTint="@color/gray_light">
...


    </LinearLayout>

<!--    organizer button-->
    <LinearLayout
        android:id="@+id/btn_organizer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="20dp"
        android:background="@drawable/border_radius"
        android:backgroundTint="@color/gray_light">
...
